<resources>
    <string name="app_name">StarWars</string>
    <string name="screen_people">CHARACTERS</string>
    <string name="name">Name</string>
    <string name="height">Height</string>
    <string name="mass">Mass</string>
    <string name="date">Date</string>
    <string name="hair_color">Hair Color</string>
    <string name="skin_color">Skin Color</string>
    <string name="eye_color">Eye Color</string>
    <string name="birth_year">Birth Year</string>
    <string name="error_msg">Sorry! Couldn\'t fetch Data.</string>
    <string name="btn_retry">Retry</string>
    <string name="error_msg_no_internet">Not connected to internet</string>
    <string name="error_msg_timeout">The server took too long to respond</string>
    <string name="error_msg_unknown">An unexpected error occurred</string>
    <string name="tap_to_reload">Tap to reload</string>

</resources>
