<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="cast_details"
            type="com.demo.starwars.model.character.ResultsItem" />

        <import type="com.demo.starwars.util.Converter" />

    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Headline"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:background="@color/colorBackground">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:maxHeight="250dp"
                        app:layout_collapseMode="parallax" />
                </RelativeLayout>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/ll_Data_Container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@color/colorLable"
                        android:textSize="15sp"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:singleLine="true"
                        android:text="@{cast_details.name}"
                        android:textColor="@color/colorDataValueText"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10sp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/height"
                            android:textColor="@color/colorLable"
                            android:textSize="15sp"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/tv_Height"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:singleLine="true"
                            android:text="@{Converter.cmToMeter(cast_details.height) +` Metres`}"
                            android:textColor="@color/colorDataValueText"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10sp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mass"
                            android:textColor="@color/colorLable"
                            android:textSize="15sp"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/tv_Mass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:singleLine="true"
                            android:text="@{cast_details.mass + ` Kg`}"
                            android:textColor="@color/colorDataValueText"
                            android:textSize="20sp" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textColor="@color/colorLable"
                        android:textSize="15sp"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/tv_Date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:singleLine="true"
                        android:text="@{Converter.parseDate(cast_details.created)}"
                        android:textColor="@color/colorDataValueText"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hair_color"
                        android:textColor="@color/colorLable"
                        android:textSize="15sp"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/tv_Hair_Color"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:singleLine="true"
                        android:text="@{cast_details.hairColor}"
                        android:textColor="@color/colorDataValueText"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/skin_color"
                        android:textColor="@color/colorLable"
                        android:textSize="15sp"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/tv_Skin_Color"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:singleLine="true"
                        android:text="@{cast_details.skinColor}"
                        android:textColor="@color/colorDataValueText"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/eye_color"
                        android:textColor="@color/colorLable"
                        android:textSize="15sp"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/tv_Eye_Color"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:singleLine="true"
                        android:text="@{cast_details.eyeColor}"
                        android:textColor="@color/colorDataValueText"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/birth_year"
                        android:textColor="@color/colorLable"
                        android:textSize="15sp"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/tv_birth_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:singleLine="true"
                        android:text="@{cast_details.birthYear}"
                        android:textColor="@color/colorDataValueText"
                        android:textSize="20sp" />

                </LinearLayout>
            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>


    </android.support.design.widget.CoordinatorLayout>
</layout>
